src/objects/ffps_brunt__Cash_Entry_Staging__c.object
<CustomObject>
    <description>Staging table for preparing the data from an external source ready to be imported as a cash entry.</description>
    <fields>
        <fullName>ffps_brunt__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Bank_Account_Reporting_Code__c</fullName>
        <label>Bank Account Reporting Code</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Cash_Entry_Date__c</fullName>
        <label>Cash Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Cash_Entry_Description__c</fullName>
        <label>Cash Entry Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Cash_Entry_Staging_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Entry Staging Batch</label>
        <referenceTo>ffps_brunt__Cash_Entry_Staging_Batch__c</referenceTo>
        <relationshipLabel>Cash Entry Staging</relationshipLabel>
        <relationshipName>Cash_Entry_Staging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Cash_Entry_Type__c</fullName>
        <label>Cash Entry Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Receipt</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Payment Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffps_brunt__Cash_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Entry</label>
        <referenceTo>c2g__codaCashEntry__c</referenceTo>
        <relationshipLabel>Cash Entry Staging</relationshipLabel>
        <relationshipName>Cash_Entry_Staging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Error_Text__c</fullName>
        <label>Error Text</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Legal_Entity__c</fullName>
        <label>Legal Entity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Line_Charge__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Line Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffps_brunt__Reference__c</fullName>
        <label>Reference</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffps_brunt__Write_Off__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Write Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Cash Entry Staging</label>
    <listViews>
        <fullName>ffps_brunt__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CES-{0000}</displayFormat>
        <label>Cash Entry Staging Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Entry Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ffps_brunt__Cannot_remove_cash_entry</fullName>
        <active>true</active>
        <description>Cannot remove cash entry</description>
        <errorConditionFormula>AND(PRIORVALUE(ffps_brunt__Cash_Entry__c) != null, ffps_brunt__Cash_Entry__c = null)</errorConditionFormula>
        <errorMessage>The cash entry once created cannot be removed from the staging record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ffps_brunt__Complete_status_cannot_be_changed</fullName>
        <active>true</active>
        <description>Complete status cannot be changed</description>
        <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(ffps_brunt__Status__c ) , &apos;Complete&apos;),  ISCHANGED(ffps_brunt__Status__c))</errorConditionFormula>
        <errorMessage>The status cannot be changed once it has been completed.</errorMessage>
    </validationRules>
</CustomObject>